Updated package version and description

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 , "contributors": [ 
     { "name": "Brian Mavity", "email": "brian@brianmavity.com" }
   ]
-, "description": "JavaScript Implementation of OMeta"
+, "description": "JavaScript Implementation of OMeta Parsing Language"
 , "engines": { "node": ">= 0.2.0" }
 , "main": "./index.js"
-, "version": "0.1.0"
+, "version": "0.2.0"
 }
